# matrx-fw

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  api-docs.yaml  partitions.csv  sdkconfig  sdkconfig.old  sdkconfig.tmp  swagger.yaml
.claude/: instructions.md
.github/workflows/: build.yml  dev.yml  release.yml
build_configs/: matrx_v9_64x128  matrx_v9_64x32  matrx_v9_64x64
components/esp-hub75/: CMakeLists.txt  Kconfig  PATCHES.md  README.md
components/esp-hub75/include/: hub75_types.h
components/esp-hub75/src/panels/: scan_patterns.h
components/esp-tls/: README.md  esp_tls_mbedtls.c
components/esp_http_client/: CMakeLists.txt  README.md  esp_http_client.c
components/matrx_resources/: CMakeLists.txt
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.cpp  pinout.h  raii_utils.hpp
main/api/: api.cpp  api.h
main/auto_brightness/: auto_brightness.cpp  auto_brightness.h
main/cert_renewal/: cert_renewal.cpp  cert_renewal.h
main/config/: config.cpp  config.h
main/crypto/: crypto.cpp  crypto.h
main/daughterboard/: CMakeLists.txt  daughterboard.cpp  daughterboard.h
main/display/: display.cpp  display.h
main/display/pinouts/: matrx_v8.h  matrx_v9.h  tidbyt_v1.h  tidbyt_v2.h
main/hw_defs/: matrx_v8.h  matrx_v9.h  tidbyt_v1.h  tidbyt_v2.h
main/ota/: ota.cpp  ota.h
main/provisioning/: certmgr.cpp  certmgr.h  provisioning.cpp  provisioning.h
main/render_requests/: render_requests.cpp  render_requests.h
main/scheduler/: scheduler.cpp  scheduler.h
main/sockets/: handlers.cpp  handlers.h  messages.cpp  messages.h  render_fetch.cpp  render_fetch.h  sockets.cpp  sockets.h
main/sprites/: apps.cpp  apps.h  sprites.cpp  sprites.h
main/webp_player/: webp_player.cpp  webp_player.h
main/wifi/: wifi.cpp  wifi.h
partition_table/: partitionTable.csv
variants/: matrx_v9_64x128  matrx_v9_64x32  matrx_v9_64x64
